# BoarCastle

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  clean.sh  compile.sh  init.sh  profile.sh  vcpkg.json
src/: camera.cpp  camera.hpp  compile_commands.json  main.cpp  math_utils.hpp  utils.hpp  vector.hpp
src/game_world/: collision_manager.hpp  pathfinder.cpp  pathfinder.hpp  world.cpp  world.hpp
src/game_world/game_objects/: transform.hpp  wall.cpp  wall.hpp  worker.cpp  worker.hpp
src/handlers/: input_handler.cpp  input_handler.hpp  time_handler.cpp  time_handler.hpp
src/input_modules/: camera.cpp  camera.hpp  construction_manager.cpp  construction_manager.hpp  construction_order.hpp  unit_manager.cpp  unit_manager.hpp
src/interaction_modules/: construction_manager.cpp  construction_manager.hpp  unit_manager.cpp  unit_manager.hpp
src/managers/: camera.cpp  camera.hpp  collision_manager.hpp  construction_manager.cpp  construction_manager.hpp  pathfinder.cpp  pathfinder.hpp  time_manager.cpp  time_manager.hpp  unit_manager.cpp  unit_manager.hpp
src/managers/pod/: input_data.hpp  map_tile.hpp
src/properties/: colors.hpp
src/utils/: rect.hpp  utils.hpp  vector.hpp
